# collabserver-network

./: .gitignore  .todo  .travis.yml  CMakeLists.txt  Doxyfile  README.md  build.sh
CMake/: AddDependencies.cmake  AddTests.cmake
CMake/Dependencies/: AddGoogleTest.cmake  AddMsgPack.cmake  AddZeroMQ.cmake  AddZeroMQcpp.cmake  AddZeroMQlib.cmake
CMake/ExternalProjects/: GoogleTest.cmake  MsgPack.cmake  ZeroMQ.cmake  ZeroMQcpp.cmake  ZeroMQlib.cmake
include/collab/messaging/: IMessage.h
include/collabcommon/messaging/: IMessage.h  IMessageEvent.h  Message.h  MessageFactory.h  MessageList.h  MessageTypes.h  Msg.h  MsgDebug.h  MsgRoomOperation.h
include/collabcommon/msg/: MsgConnectionRequest.h  MsgConnectionSuccess.h  MsgDebug.h  MsgError.h  MsgRoomOperation.h
include/collabcommon/network/: Network.h  ZMQSocket.h
include/collabcommon/utils/: Log.h  Singleton.h  Uncopyable.h  constants.h
include/collabmessaging/: IMessage.h  IMessageEvent.h  MessageFactory.h  MessageTypes.h
include/collabserver/network/messaging/: MessageFactory.h  MessageList.h
include/collabserver/network/socket/: ZMQSocket.h
include/collabserver/network/utils/: constants.h
src/messaging/: MessageFactory.cpp  MessageList.cpp
src/msg/: MsgConnectionRequest.cpp  MsgConnectionSuccess.cpp  MsgDebug.cpp  MsgError.h
src/network/: MessageFactory.cpp  Network.cpp  ZMQSocket.cpp
src/socket/: ZMQSocket.cpp
test/msg/: Test_MsgConnectionSuccess.cpp  Test_MsgDebug.cpp  Test_MsgRoomOperation.cpp
test/network/: Test_ZMQSocket.cpp
tests/messaging/: Test_MsgConnectionSuccess.cpp  Test_MsgDebug.cpp  Test_MsgRoomOperation.cpp
tests/msg/: Test_MsgConnectionSuccess.cpp  Test_MsgDebug.cpp  Test_MsgRoomOperation.cpp
tests/network/: Test_ZMQSocket.cpp
tests/socket/: Test_ZMQSocket.cpp
